--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
    <title>Let's Go, Pikachu</title>
 </head>
 <body>
-    <header>header</header>
-    <main>main</main>
-    <footer>footer</footer>
+    <header>
+        <div class="container"></div>
+        header
+    </header>
+
+    <main>
+    <div class="container"></div>
+        main
+    </main>
+    
+    <footer>
+        <div class="container"></div>
+        footer
+    </footer>
     
 </body>
 </html>
