--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="style.css">
    <title>Let's Go, Pikachu</title>
 </head>
 <body>
     <header>
-        <div class="container"></div>
-        header
+        <div class="container"> <a href="https://www.pokemon.com/br">
+            <img src="./img/poke-bola.png" alt="poke bola">
+            <span>Pokemon</span>
+        </a>
+    </div>
+       
     </header>
 
     <main>
