--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
     </header>
 
     <main>
-    <div class="container"></div>
-        main
+  
+    <div class="container">
+        <div class="title">
+            title
+        </div>
+        <div class="description">
+            description
+        </div>
+        <a href="#" class="action">
+            action
+        </a>     
+
+ </div>
     </main>
     
     <footer>
