finalizado com sucesso

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <footer>
         <div class="container">
             <p class="footer__text">
-                Copyright © 2022 | Fernando Leonid
+                Copyright © 2022 | Yuri Silva 
             </p>
         </div>
     </footer>
